# Antigravity-Manager

./: .gitignore  Dockerfile  README.md  local_build.sh  local_bundle.sh
.github/workflows/: release.yml
build-aux/docker/: Dockerfile
build-aux/flatpak/: com.lbjlaq.antigravity-tools.yml
scripts/: install.sh
src-tauri/: Cargo.toml
src-tauri/cli/: Cargo.toml
src-tauri/cli/src/: main.rs
src-tauri/core/: Cargo.toml
src-tauri/core/src/: error.rs  lib.rs
src-tauri/core/src/models/: config.rs  mod.rs  proxy_config.rs
src-tauri/core/src/modules/: account.rs  config.rs  db.rs  i18n.rs  mod.rs  proxy_db.rs
src-tauri/core/src/modules/proxy/: config.rs  monitor.rs  rate_limit.rs  security.rs  server.rs  session_manager.rs  token_manager.rs  zai_vision_tools.rs
src-tauri/core/src/modules/proxy/handlers/: audio.rs  claude.rs  common.rs  gemini.rs  mcp.rs  openai.rs
src-tauri/core/src/modules/proxy/mappers/claude/: mod.rs  request.rs  response.rs  streaming.rs  thinking_utils.rs
src-tauri/core/src/modules/proxy/mappers/gemini/: wrapper.rs
src-tauri/core/src/modules/proxy/mappers/openai/: request.rs
src-tauri/core/src/modules/proxy/middleware/: auth.rs  monitor.rs
src-tauri/core/src/modules/proxy/providers/: zai_anthropic.rs
src-tauri/core/src/modules/proxy/tests/: comprehensive.rs
src-tauri/core/src/modules/proxy/upstream/: client.rs
src-tauri/core/src/utils/: http.rs
src-tauri/server/: Cargo.toml
src-tauri/server/src/: main.rs
src-tauri/src/: lib.rs
src-tauri/src/modules/: account.rs  mod.rs  process.rs
(+1 files in other folders)
