[package]
name = "antigravity-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
thiserror = "2.0.17"
sha2 = "0.10"
regex = "1.12.2"
rand = "0.8"
once_cell = "1.19"
eventsource-stream = "0.2"
futures = "0.3"
bytes = "1.5"
anyhow = "1.0"

# Axum / Proxy dependencies
axum = { version = "0.7", features = ["multipart"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
dashmap = "6.1"
async-stream = "0.3.6"
pin-project = "1.1" 
